Sun Aug 23 00:04:56 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (command_setenv): New function, allowing
	  application code to ask for environment variables to be set when a
	  command is executed.
	  (command_new, command_new_function, command_dup, command_dump,
	  command_tostring, command_free): Handle new nenv, env_max, and env
	  members of 'struct command'.
	  (argstr_get_word): Add TODO comment for environment variable
	  support.
	  (pipeline_start): Set environment variables as requested.
	* lib/pipeline.h (struct command_env): New structure.
	  (struct command): Add nenv, env_max, and env members.
	  (command_setenv): Add prototype.
	* src/man.c (run_mandb): Set MAN_MUST_CREATE=1 environment variable
	  if create is true.
	* src/mandb.c (main): If --create was passed and no databases were
	  created, only exit non-zero if MAN_MUST_CREATE=1.

Sat Aug 22 15:34:15 BST 2009  Colin Watson  <cjwatson@debian.org>

	Cope with some more cases of database corruption (Debian bug
	#187750).

	* libdb/db_store.c (dbstore): Always replace existing keys once
	  we've decided we ought to. If the key already exists in the
	  database, then that probably indicates some kind of database
	  corruption, but our new key is almost certainly better.
	* src/check_mandirs.c (sanity_check_db): New function, checking
	  dbver_rd and ensuring that all keys have non-NULL content.
	  (update_db): Use sanity_check_db to decide whether an existing
	  database is OK.

	* src/accessdb.c (main): If we encounter a key with no content,
	  print a debugging message and continue as far as we can before
	  exiting non-zero, rather than just silently exiting non-zero
	  immediately.

Sat Aug 22 14:58:39 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/mandb-2: Run mandb with a clean path, and only on the
	  test manual page hierarchy (already done for the second instance,
	  but not the first).

Sat Aug 22 14:51:25 BST 2009  Yuri Kozlov  <yuray@komyakino.ru>
