@@ -140,6 +140,20 @@ used.
      ing a choice of interface library, use this  option  to
      specify which library to use.
 
+−−enable−automatic−create
+     If this flag is used, man will automatically create index  databases  for
+     users' private manual page hierarchies.
+
+−−disable−automatic−update
+     Normally,  man  will  update entries in index databases if it finds newly
+     installed manual pages (if the −−update flag is used) or  delete  entries
+     if manual pages are removed.  This flag suppresses this behaviour.
+
+−−disable−cats
+     Normally, man will automatically try to create cat files corresponding to
+     manual files when a manual page is read.  This flag suppresses  this  be-
+     haviour.
+
 
 INSTALL
 =======
