@@ -1,3 +1,15 @@
+Sun Aug 23 00:07:03 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* configure.ac: Add --enable-automatic-create,
+	  --disable-automatic-update, and --disable-cats options.
+	* include/manconfig.h.in (MAN_DB_CREATES, MAN_DB_UPDATES, MAN_CATS):
+	  Remove.
+	* manual/intro.me (Arguments to configure): Document new options.
+	* manual/misc.me (Modes of operation): Adjust configuration advice
+	  to use new configure options.
+	* README (Non-generic arguments to configure): Update.
+	* NEWS: Document this.
+
 Sun Aug 23 00:04:56 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (command_setenv): New function, allowing
